plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0-M1'
	id 'io.spring.dependency-management' version '1.1.2'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.wadajo'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = "19.PREVIEW"
}

compileJava {
	options.compilerArgs += ['--enable-preview']
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.graphql:spring-graphql-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
targetCompatibility = JavaVersion.VERSION_19
